Add second table(phone), add unit tests for BLL

--- a/PersonsCRM/WebUI/Views/Home/jqGrid.cshtml
+++ b/PersonsCRM/WebUI/Views/Home/jqGrid.cshtml
@@ -90,8 +90,8 @@
                     },
                     afterSubmit: function (response, postdata) {
                         // обновление грида
-                        $(this).jqGrid('setGridParam', { datatype: 'json' }).trigger('reloadGrid')
-                        return [true, "", 0]
+                        $(this).jqGrid('setGridParam', { datatype: 'json' }).trigger('reloadGrid');
+                        return [true, "", 0];
                     }
                 };
             };
