--- a/PersonsCRM/WebUI/Views/Home/Edit.cshtml
+++ b/PersonsCRM/WebUI/Views/Home/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("Edit", "Home"))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>PersonViewModel</h4>
         <hr />
@@ -40,6 +40,29 @@
                 @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        @{
+            int count = 0;
+        }
+        @do
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, "", new {@class = "text-danger"})
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, "", new {@class = "text-danger"})
+                </div>
+            </div>
+            count++;
+        }while(count <= Model.Phones?.Count);
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
