--- a/PersonsCRM/WebUI/Views/Home/Index.cshtml
+++ b/PersonsCRM/WebUI/Views/Home/Index.cshtml
@@ -20,26 +20,41 @@
         <th>
             @Html.DisplayNameFor(model => model.Age)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Phones.Find(p => p.PersonId == model.Id).Number)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Phones.Find(p => p.PersonId == model.Id).Type)
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @*Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            @foreach (var phone in item.Phones)
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => phone.Number);
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => phone.Type);
+                </td>
+            }
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @*Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
