Add second model to the dapper and ado, fix view

--- a/PersonsCRM/WebUI/Views/Home/Edit.cshtml
+++ b/PersonsCRM/WebUI/Views/Home/Edit.cshtml
@@ -47,22 +47,22 @@
         @do
         {
             <div class="form-group">
-                @Html.LabelFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, htmlAttributes: new {@class = "control-label col-md-2"})
+                @Html.LabelFor(model => model.Phones[count].Number, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Number, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.Phones[count].Number, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Phones[count].Number, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, htmlAttributes: new {@class = "control-label col-md-2"})
+                @Html.LabelFor(model => model.Phones[count].Type, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.Phones.Find(p => p.PersonId == Model.Id).Type, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.Phones[count].Type, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Phones[count].Type, "", new {@class = "text-danger"})
                 </div>
             </div>
             count++;
-        }while(count <= Model.Phones?.Count);
+        }while(count < Model.Phones?.Count);
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
