--- a/PersonsCRM/WebUI/Views/Person/Grid.cshtml
+++ b/PersonsCRM/WebUI/Views/Person/Grid.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WebUI.Models.PersonViewModel>
+﻿@using WebUI.Models
+@model IList<PersonViewModel>
 
 @{
     ViewBag.Title = "Grid";
@@ -17,53 +18,56 @@
         <table class="table">
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.FirstName)
+                    @Html.DisplayNameFor(model => model[0].FirstName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.LastName)
+                    @Html.DisplayNameFor(model => model[0].LastName)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Age)
+                    @Html.DisplayNameFor(model => model[0].Age)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Phones.FirstOrDefault().Number)
+                    @Html.DisplayNameFor(model => model[0].Phones.FirstOrDefault().Number)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Phones.FirstOrDefault().Type)
+                    @Html.DisplayNameFor(model => model[0].Phones.FirstOrDefault().Type)
                 </th>
             </tr>
 
-            @foreach (var item in Model)
+            @for(var i = 0; i < Model?.Count(); i++)
             {
-                @Html.HiddenFor(model => item.Id)
+                @Html.HiddenFor(model => Model[i].Id)
 
                 <tr>
                     <td>
-                        @Html.TextBoxFor(modelItem => item.FirstName)
-                        @Html.ValidationMessageFor(model => item.FirstName, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(modelItem => Model[i].FirstName)
+                        @Html.ValidationMessageFor(model => Model[i].FirstName, "", new { @class = "text-danger" })
                     </td>
                     <td>
-                        @Html.TextBoxFor(modelItem => item.LastName)
-                        @Html.ValidationMessageFor(model => item.LastName, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(modelItem => Model[i].LastName)
+                        @Html.ValidationMessageFor(model => Model[i].LastName, "", new { @class = "text-danger" })
                     </td>
                     <td>
-                        @Html.TextBoxFor(modelItem => item.Age)
-                        @Html.ValidationMessageFor(model => item.Age, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(modelItem => Model[i].Age)
+                        @Html.ValidationMessageFor(model => Model[i].Age, "", new { @class = "text-danger" })
                     </td>
-                    @foreach (var phone in item.Phones)
+                    @for(var j = 0; j < Model[i].Phones.Count; j++)
                     {
+                        @Html.HiddenFor(model => Model[i].Phones[j].Id)
+                        @Html.HiddenFor(model => Model[i].Phones[j].PersonId)
+
                         <td>
-                            @Html.TextBoxFor(modelItem => phone.Number)
-                            @Html.ValidationMessageFor(modelItem => phone.Number, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(modelItem => Model[i].Phones[j].Number)
+                            @Html.ValidationMessageFor(modelItem => Model[i].Phones[j].Number, "", new { @class = "text-danger" })
                         </td>
                         <td>
-                            @Html.TextBoxFor(modelItem => phone.Type)
-                            @Html.ValidationMessageFor(modelItem => phone.Type, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(modelItem => Model[i].Phones[j].Type)
+                            @Html.ValidationMessageFor(modelItem => Model[i].Phones[j].Type, "", new { @class = "text-danger" })
                         </td>
                     }
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = Model[i].Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = Model[i].Id })
                     </td>
                 </tr>
             }
