Add extra phone fields

--- a/PersonsCRM/WebUI/Views/Person/Edit.cshtml
+++ b/PersonsCRM/WebUI/Views/Person/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm("Edit", "Person"))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>PersonViewModel</h4>
         <hr />
@@ -65,13 +65,16 @@
             count++;
         } while (count < Model.Phones?.Count);
 
+        <div id="target"></div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-}
+            }
+<button type="button" id="add" onclick="AddBtnClick()">Add extra phone</button>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
@@ -80,3 +83,22 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script>
+    function AddBtnClick()
+    {
+        $('#target').prepend('<input data-val="true" data-val-number="The field Id must be a number." data-val-required="The Id field is required." id="Phones_Id" name="Phones[0].Id" type="hidden" value="" /><div class="form-group">' +
+                '<label class="control-label col-md-2" for="Phone_Number">Phone number</label>' +
+                '<div class="col-md-10">' +
+                    '<input class="form-control text-box single-line" id="Phone_Number" name="Phone.Number" type="tel" value="" />' +
+                    '<span class="field-validation-valid text-danger" data-valmsg-for="Phone.Number" data-valmsg-replace="true"></span>' +
+                '</div>' +
+            '</div>' +
+            '<div class="form-group">' +
+                '<label class="control-label col-md-2" for="Phones_0__Type">Type</label>' +
+                '<div class="col-md-10">' +
+                    '<input class="form-control text-box single-line" id="Phone_Type" name="Phone.Type" type="text" value="" />' +
+                    '<span class="field-validation-valid text-danger" data-valmsg-for="Phone.Type" data-valmsg-replace="true"></span>' +
+                '</div>' +
+            '</div>')
+    }
+</script>
