--- a/PersonsCRM/WebUI/Views/Shared/_Layout.cshtml
+++ b/PersonsCRM/WebUI/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Persons", "index", "Person")</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
