--- a/PersonsCRM/WebUI/Views/Person/Index.cshtml
+++ b/PersonsCRM/WebUI/Views/Person/Index.cshtml
@@ -50,9 +50,12 @@
                 </td>
             }
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @*Html.ActionLink("Details", "Details", new { id = item.Id }) |*@
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <span class="label label-warning">
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                </span> |
+                <span class="label label-danger">
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </span>
             </td>
         </tr>
     }
