--- a/Phonebook/WebUI/Views/Phonebook/Index.cshtml
+++ b/Phonebook/WebUI/Views/Phonebook/Index.cshtml
@@ -18,48 +18,27 @@
             @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.StreetId)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phones.FirstOrDefault().Number)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phones.FirstOrDefault().Type)
-        </th>
-        <th>
-            @Html.DisplayName("Street")
-        </th>
+        <th></th>
     </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            @foreach (var phone in item.Phones)
-            {
-                <td>
-                    @Html.DisplayFor(modelItem => phone.Number)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => phone.Type)
-                </td>
-                <td>
-                    @*Html.DisplayFor(x => x.ViewBag.streets )*@
-                </td>
-            }
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StreetId)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
+}
 
 </table>
