--- a/Phonebook/WebUI/Views/Account/Index.cshtml
+++ b/Phonebook/WebUI/Views/Account/Index.cshtml
@@ -38,8 +38,11 @@
         </dt>
 
         <dd>
-            @Html.Raw("<img style='width:80px; height:60px;' src=\"data:image/jpeg;base64,"
+            @if (Model.Image != null)
+            {
+                @Html.Raw("<img style='width:80px; height:60px;' src=\"data:image/jpeg;base64,"
                                 + Convert.ToBase64String(Model.Image) + "\" />")
+            }
         </dd>
 
     </dl>
