--- a/Phonebook/WebUI/Views/Account/Register.cshtml
+++ b/Phonebook/WebUI/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <h2>Register</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
