--- a/Phonebook/WebUI/Views/Account/Index.cshtml
+++ b/Phonebook/WebUI/Views/Account/Index.cshtml
@@ -5,47 +5,48 @@
 }
 
 <h2>Index</h2>
+<h4>UserModel</h4>
+<hr />
 
-<div>
-    <h4>UserModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-
-        <dd>
-            @if (Model.Image != null)
+<div class="form-group">
+    <div class="form-group">
+        @if (Model.Image != null)
             {
-                @Html.Raw("<img style='width:80px; height:60px;' src=\"data:image/jpeg;base64,"
+            @Html.Raw("<img style='width:80px; height:60px;' src=\"data:image/jpeg;base64,"
                                 + Convert.ToBase64String(Model.Image) + "\" />")
-            }
-        </dd>
+        }
+        <div class="col-md-5">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-    </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Age)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Age)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Image)
+                </dt>
+            </dl>
+        </div>
+    </div>
+
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", "Account")
