--- a/Phonebook/WebUI/Views/Shared/_Layout.cshtml
+++ b/Phonebook/WebUI/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </body>
 </html>
