Small ui changes

--- a/Phonebook/WebUI/Views/Account/UserInfo.cshtml
+++ b/Phonebook/WebUI/Views/Account/UserInfo.cshtml
@@ -49,5 +49,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "EditUser", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Home")
 </p>
