--- a/Phonebook/WebUI/Views/Account/EditUser.cshtml
+++ b/Phonebook/WebUI/Views/Account/EditUser.cshtml
@@ -57,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "UserInfo")
 </div>
 
 @section Scripts {
